@@ -26,6 +26,7 @@ MODULE_OBJS := \
 	src/emucore/CartF8.o \
 	src/emucore/CartF8SC.o \
 	src/emucore/CartFA.o \
+	src/emucore/CartFA2.o \
 	src/emucore/CartFE.o \
 	src/emucore/CartMC.o \
 	src/emucore/CartSB.o \
